--- a/src/app/diferencia-color/diferencia-color.page.html
+++ b/src/app/diferencia-color/diferencia-color.page.html
@@ -6,41 +6,119 @@
 </ion-header>
 
 <ion-content padding-top>
-  <ion-fab vertical="top" edge horizontal="end" slot="fixed">
-    <ion-fab-button mini color="tertiary" (click)="share()"><ion-icon name="share"></ion-icon></ion-fab-button>
-  </ion-fab>
-  <ion-item>
-    <ion-label> Usar valores numericos</ion-label>
-    <ion-checkbox slot="start" [checked]="numeric1" [(ngModel)]="numeric1" (ionChange)="changeSelected('numeric1DC', numeric1)"></ion-checkbox>
-  </ion-item>
+  <ng-container *ngIf="!loading; else: ld">
+    <ion-fab vertical="top" edge horizontal="end" slot="fixed">
+      <ion-fab-button mini color="tertiary" (click)="share()"><ion-icon name="share"></ion-icon></ion-fab-button>
+    </ion-fab>
+    <ion-item>
+      <ion-label> Usar valores numericos</ion-label>
+      <ion-checkbox
+        slot="start"
+        [checked]="numeric1"
+        [(ngModel)]="numeric1"
+        (ionChange)="changeSelected('numeric1DC', numeric1)"
+      ></ion-checkbox>
+    </ion-item>
 
-  <ion-item>
-    <ion-label>Master desde</ion-label>
-    <ion-select [(ngModel)]="fromColorSpaceMaster" interface="popover" (ionChange)="changeSelectedColorSpaceMaster()">
-      <ion-select-option *ngFor="let sColor of colorSpaces" [value]="sColor">{{ colorSpacesTypes[sColor] }}</ion-select-option>
-    </ion-select>
-  </ion-item>
+    <ion-item>
+      <ion-label>Master desde</ion-label>
+      <ion-select [(ngModel)]="fromColorSpaceMaster" interface="popover" (ionChange)="changeSelectedColorSpaceMaster()">
+        <ion-select-option *ngFor="let sColor of colorSpaces" [value]="sColor">{{
+          colorSpacesTypes[sColor]
+        }}</ion-select-option>
+      </ion-select>
+    </ion-item>
 
-  <app-rgbsettings [active]="colorSpacesTypes[fromColorSpaceMaster] == 'RGB'" [numeric]="numeric1" [converters]="convertersMaster" (colorChange)="changeColorMaster($event)"> </app-rgbsettings>
-  <app-labsettings [active]="colorSpacesTypes[fromColorSpaceMaster] == 'LAB'" [numeric]="numeric1" [converters]="convertersMaster" (colorChange)="changeColorMaster($event)"></app-labsettings>
-  <app-cmysettings [active]="colorSpacesTypes[fromColorSpaceMaster] == 'CMY'" [numeric]="numeric1" [converters]="convertersMaster" (colorChange)="changeColorMaster($event)"></app-cmysettings>
-  <app-cmyksettings [active]="colorSpacesTypes[fromColorSpaceMaster] == 'CMYK'" [numeric]="numeric1" [converters]="convertersMaster" (colorChange)="changeColorMaster($event)"></app-cmyksettings>
-  <app-hexsettings [active]="colorSpacesTypes[fromColorSpaceMaster] == 'HEX'" [converters]="convertersMaster" (colorChange)="changeColorMaster($event)"></app-hexsettings>
-  <app-lchsettings [active]="colorSpacesTypes[fromColorSpaceMaster] == 'LCH'" [numeric]="numeric1" [converters]="convertersMaster" (colorChange)="changeColorMaster($event)"></app-lchsettings>
-  <ion-item>
-    <ion-label>Sample desde</ion-label>
-    <ion-select [(ngModel)]="fromColorSpaceSample" interface="popover" (ionChange)="changeSelectedColorSpaceSample()">
-      <ion-select-option *ngFor="let sColor of colorSpaces" [value]="sColor">{{ colorSpacesTypes[sColor] }}</ion-select-option>
-    </ion-select>
-  </ion-item>
-  <app-rgbsettings [active]="colorSpacesTypes[fromColorSpaceSample] == 'RGB'" [numeric]="numeric1" [converters]="convertersSample" (colorChange)="changeColorSample($event)"> </app-rgbsettings>
-  <app-labsettings [active]="colorSpacesTypes[fromColorSpaceSample] == 'LAB'" [numeric]="numeric1" [converters]="convertersSample" (colorChange)="changeColorSample($event)"></app-labsettings>
-  <app-cmysettings [active]="colorSpacesTypes[fromColorSpaceSample] == 'CMY'" [numeric]="numeric1" [converters]="convertersSample" (colorChange)="changeColorSample($event)"></app-cmysettings>
-  <app-cmyksettings [active]="colorSpacesTypes[fromColorSpaceSample] == 'CMYK'" [numeric]="numeric1" [converters]="convertersSample" (colorChange)="changeColorSample($event)"></app-cmyksettings>
-  <app-hexsettings [active]="colorSpacesTypes[fromColorSpaceSample] == 'HEX'" [converters]="convertersSample" (colorChange)="changeColorSample($event)"></app-hexsettings>
-  <app-lchsettings [active]="colorSpacesTypes[fromColorSpaceSample] == 'LCH'" [numeric]="numeric1" [converters]="convertersSample" (colorChange)="changeColorSample($event)"></app-lchsettings>
-  <ion-card>
-    <ion-card-header> <ion-card-title>Resultados</ion-card-title> </ion-card-header>
-    <ion-card-content> <canvas #canvasDifColor id="canvasDifColor" height="600" width="1000" style="height:100%; width:100%;"></canvas> </ion-card-content>
-  </ion-card>
+    <app-rgbsettings
+      [active]="colorSpacesTypes[fromColorSpaceMaster] == 'RGB'"
+      [numeric]="numeric1"
+      [converters]="convertersMaster"
+      (colorChange)="changeColorMaster($event)"
+    >
+    </app-rgbsettings>
+    <app-labsettings
+      [active]="colorSpacesTypes[fromColorSpaceMaster] == 'LAB'"
+      [numeric]="numeric1"
+      [converters]="convertersMaster"
+      (colorChange)="changeColorMaster($event)"
+    ></app-labsettings>
+    <app-cmysettings
+      [active]="colorSpacesTypes[fromColorSpaceMaster] == 'CMY'"
+      [numeric]="numeric1"
+      [converters]="convertersMaster"
+      (colorChange)="changeColorMaster($event)"
+    ></app-cmysettings>
+    <app-cmyksettings
+      [active]="colorSpacesTypes[fromColorSpaceMaster] == 'CMYK'"
+      [numeric]="numeric1"
+      [converters]="convertersMaster"
+      (colorChange)="changeColorMaster($event)"
+    ></app-cmyksettings>
+    <app-hexsettings
+      [active]="colorSpacesTypes[fromColorSpaceMaster] == 'HEX'"
+      [converters]="convertersMaster"
+      (colorChange)="changeColorMaster($event)"
+    ></app-hexsettings>
+    <app-lchsettings
+      [active]="colorSpacesTypes[fromColorSpaceMaster] == 'LCH'"
+      [numeric]="numeric1"
+      [converters]="convertersMaster"
+      (colorChange)="changeColorMaster($event)"
+    ></app-lchsettings>
+    <ion-item>
+      <ion-label>Sample desde</ion-label>
+      <ion-select [(ngModel)]="fromColorSpaceSample" interface="popover" (ionChange)="changeSelectedColorSpaceSample()">
+        <ion-select-option *ngFor="let sColor of colorSpaces" [value]="sColor">{{
+          colorSpacesTypes[sColor]
+        }}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <app-rgbsettings
+      [active]="colorSpacesTypes[fromColorSpaceSample] == 'RGB'"
+      [numeric]="numeric1"
+      [converters]="convertersSample"
+      (colorChange)="changeColorSample($event)"
+    >
+    </app-rgbsettings>
+    <app-labsettings
+      [active]="colorSpacesTypes[fromColorSpaceSample] == 'LAB'"
+      [numeric]="numeric1"
+      [converters]="convertersSample"
+      (colorChange)="changeColorSample($event)"
+    ></app-labsettings>
+    <app-cmysettings
+      [active]="colorSpacesTypes[fromColorSpaceSample] == 'CMY'"
+      [numeric]="numeric1"
+      [converters]="convertersSample"
+      (colorChange)="changeColorSample($event)"
+    ></app-cmysettings>
+    <app-cmyksettings
+      [active]="colorSpacesTypes[fromColorSpaceSample] == 'CMYK'"
+      [numeric]="numeric1"
+      [converters]="convertersSample"
+      (colorChange)="changeColorSample($event)"
+    ></app-cmyksettings>
+    <app-hexsettings
+      [active]="colorSpacesTypes[fromColorSpaceSample] == 'HEX'"
+      [converters]="convertersSample"
+      (colorChange)="changeColorSample($event)"
+    ></app-hexsettings>
+    <app-lchsettings
+      [active]="colorSpacesTypes[fromColorSpaceSample] == 'LCH'"
+      [numeric]="numeric1"
+      [converters]="convertersSample"
+      (colorChange)="changeColorSample($event)"
+    ></app-lchsettings>
+    <ion-card>
+      <ion-card-header> <ion-card-title>Resultados</ion-card-title> </ion-card-header>
+      <ion-card-content>
+        <canvas #canvasDifColor id="canvasDifColor" height="600" width="1000" style="height:100%; width:100%;"></canvas>
+      </ion-card-content>
+    </ion-card>
+  </ng-container>
+  <ng-template #ld>
+    <div fxFlex="100%" fxFlexFill fxLayoutAlign="center center">
+      <ion-spinner color="primary" name="bubbles"></ion-spinner>
+    </div>
+  </ng-template>
 </ion-content>
