--- a/src/app/alto-rollo/alto-rollo.page.html
+++ b/src/app/alto-rollo/alto-rollo.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start"> <ion-menu-button></ion-menu-button> </ion-buttons>
-    <ion-title> Alto y Piezas por Rollo </ion-title>
+    <ion-title>
+      <ion-icon color="dark" [src]="'assets/icons/roll.svg'"></ion-icon>
+      <span> Alto y Piezas por Rollo</span>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
