--- a/src/app/convert-color/convert-color.page.html
+++ b/src/app/convert-color/convert-color.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start"> <ion-menu-button></ion-menu-button> </ion-buttons>
-    <ion-title> Convertir Color </ion-title>
+    <ion-title>
+      <ion-icon  [src]="'assets/icons/cmy.svg'"></ion-icon>
+      <span> Convertir Color</span>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +15,7 @@
 
   <ion-item>
     <ion-label> Usar valores numericos</ion-label>
-    <ion-checkbox slot="start" [checked]="numeric1" [(ngModel)]="numeric1" (ionChange)="changeChecked('numeric1DC', numeric1)"></ion-checkbox>
+    <ion-checkbox slot="end" [checked]="numeric1" [(ngModel)]="numeric1" (ionChange)="changeChecked('numeric1DC', numeric1)"></ion-checkbox>
   </ion-item>
 
   <ion-item>
