--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,16 +1,20 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start"> <ion-menu-button></ion-menu-button> </ion-buttons>
     <ion-title>
-      Home
+      <ion-icon color="dark" [src]="'assets/icons/house.svg'"></ion-icon>
+      <span> FlexCalc</span>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+
+  <div>
+    Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a>, <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a>,
+    <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
+    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+  </div>
 </ion-content>
