--- a/src/app/metros-lineales/metros-lineales.page.html
+++ b/src/app/metros-lineales/metros-lineales.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start"> <ion-menu-button></ion-menu-button> </ion-buttons>
-    <ion-title> Metros Lineales </ion-title>
+    <ion-title>
+      <ion-icon color="dark" [src]="'assets/icons/measuring-tape.svg'"></ion-icon>
+      <span> Metros Lineales</span>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
