--- a/src/app/catalogo-pant/catalogo-pant.page.html
+++ b/src/app/catalogo-pant/catalogo-pant.page.html
@@ -6,24 +6,57 @@
       <span> Catalogo Pantone®</span>
     </ion-title>
   </ion-toolbar>
+  <ion-toolbar> <ion-searchbar [(ngModel)]="searchPantoneText" placeholder="Buscar" debounce="1500"></ion-searchbar> </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <input [(ngModel)]="searchPantoneText" placeholder="search text goes here" />
-
   <ng-container *ngIf="searchPantoneText === null || searchPantoneText === ''; else: search">
     <ion-list>
-      <ion-item *ngFor="let p of (pantoneColors | slice: 0:limit)">
-        <div slot="start" style="width: 40%; height: 100px;" [style.background-color]="p.hex">{{ p.hex }}</div>
-        <ion-label>{{ p.name }} </ion-label>
+      <ion-item *ngFor="let p of (pantoneColors | slice: 0:limit)" fxLayout="row">
+        <div fxFlex="120px">
+          <ion-card>
+            <div style="height: 100px" [style.background-color]="p.hex"></div>
+            <ion-card-header>
+              <ion-card-subtitle>{{ p.name }}</ion-card-subtitle>
+            </ion-card-header>
+          </ion-card>
+        </div>
+        <div fxFlex="100%" fxLayout="column">
+          <ion-text class="p-properties">
+            <p>Lab({{ p.l }}, {{ p.a }}, {{ p.b }})</p>
+            <p>CMYK({{ p.c }}, {{ p.m }}, {{ p.y }}, {{ p.k }})</p>
+            <p>Hex({{ p.hex }})</p>
+            <p>RGB({{ p.rgbValues.r }}, {{ p.rgbValues.g }}, {{ p.rgbValues.b }})</p>
+          </ion-text>
+        </div>
       </ion-item>
     </ion-list>
 
-    <ion-infinite-scroll threshold="5%" (ionInfinite)="loadData($event)"> <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data..."> </ion-infinite-scroll-content> </ion-infinite-scroll>
+    <ion-infinite-scroll threshold="5%" (ionInfinite)="loadData($event)">
+      <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   </ng-container>
   <ng-template #search>
     <ion-list>
-      <ion-item *ngFor="let p of (pantoneColors | filterPantone: searchPantoneText)"> {{ p.name }} </ion-item>
+      <ion-item *ngFor="let p of (pantoneColors | filterPantone: searchPantoneText)" fxLayout="row">
+        <div fxFlex="120px">
+          <ion-card>
+            <div style="height: 100px" [style.background-color]="p.hex"></div>
+            <ion-card-header>
+              <ion-card-title>{{ p.name }}</ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </div>
+        <div fxFlex="100%" fxLayout="column">
+          <ion-text class="p-properties">
+            <p>Lab({{ p.l }}, {{ p.a }}, {{ p.b }})</p>
+            <p>CMYK({{ p.c }}, {{ p.m }}, {{ p.y }}, {{ p.k }})</p>
+            <p>Hex({{ p.hex }})</p>
+            <p>RGB({{ p.rgbValues.r }}, {{ p.rgbValues.g }}, {{ p.rgbValues.b }})</p>
+          </ion-text>
+        </div>
+      </ion-item>
     </ion-list>
   </ng-template>
 </ion-content>
